<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.UserFragment">


    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/top_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/white_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:src="@drawable/log_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/woman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/women2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        android:padding="8dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/logout"
        app:layout_constraintTop_toTopOf="@id/logout" />

    <TextView
        android:id="@+id/txt_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_a_word"
        android:textColor="#2f3363"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/img"
        app:layout_constraintTop_toBottomOf="@id/img" />

    <EditText
        android:id="@+id/et_something"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_et_1"
        android:ems="10"
        android:hint="@string/say_some_thing"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#A2A4b5"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/txt_word"
        app:layout_constraintTop_toBottomOf="@id/txt_word" />

    <ImageView
        android:id="@+id/color_palette"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/palette"
        app:layout_constraintStart_toStartOf="@id/txt_word"
        app:layout_constraintTop_toBottomOf="@id/et_something" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="@id/et_something"
        app:layout_constraintTop_toBottomOf="@id/et_something" />


    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:textColor="#2f3363"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>